# agnai

./: .babelrc  .dockerignore  .env.template  .eslintrc.js  .gitignore  .parcelrc  .prettierrc  Dockerfile  README.md  SECURITY.md  api.tsconfig.json  cypress.config.ts  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  public.ts  pyproject.toml  requirements.sh  requirements.txt  self-host.docker-compose.yml  sprites.js  srv.tsconfig.json  tailwind.config.js  template.settings.json  tsconfig.json
.github/: FUNDING.yml  agn.docker-compose.yml  ci.docker-compose.yml  deploy-stg.sh  deploy.sh  dev-deploy.sh  inject.js  rev-version.js
common/: adapters.ts  ambient.d.ts  characters.ts  chat.ts  default-preset.ts  dummy.ts  grammar.ts  horde-gen.ts  image-prompt.ts  image-util.ts  image.ts  memory.ts  mode-templates.ts  module.d.ts  presets.ts  prompt-order.ts  prompt.ts  sampler-order.ts  scenario.ts  schema.ts  template-parser.ts  templates.ts  tokenize.ts  typed-event-emitter.ts  util.ts  v1-template-parser.ts
extras/: .gitkeep
hub/: App.tsx  index.html
instructions/: memory.md  novel.md
model/: app.py  args.py  device.py  huggingface.yml  memory.py  server.py  summary.py
server/: app.ts  config.ts  index.ts  logger.ts
src/: App.tsx  index.html  index.tsx  tailwind.css
srv/: app.ts  augment.d.ts  bin.ts  config.ts  logger.ts  middleware.ts  module.d.ts  notification-dispatch.ts  server.ts  start.ts  tokenize.ts
tests/: chat-model-sample-chat.spec.ts  completion.spec.ts  init.ts  parser.spec.ts  placeholder.spec.ts  util.ts  (+6 more)
(+769 files in other folders)
